# X12-Parser-Encoder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: lambda_handler.py  main.py
apps/api/app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py
apps/api/app/routers/: __init__.py  convert.py  export.py  generate.py  health.py  parse.py  pipeline.py  profiles.py  templates.py  validate.py
apps/api/app/schemas/: __init__.py  base.py  common.py  convert.py  export.py  generate.py  health.py  parse.py  pipeline.py  profiles.py  validate.py
apps/api/app/services/: __init__.py  exporter.py  generator.py  health.py  parser.py  patients.py  plans.py  profiles.py  templates.py  uploads.py  validator.py  (+1 more)
apps/api/templates/: eligibility_template.csv  eligibility_template.xlsx  template_spec.md
apps/api/tests/: conftest.py  helpers.py  test_convert.py  test_cors.py  test_error_envelope.py  test_export.py  test_export_templates_profiles.py  test_generate.py  test_health.py  test_lambda_handler.py  test_metrics.py  test_parse_2120c.py  test_parse_gainwell_metadata_smoke.py  test_parse_gainwell_regression.py  test_parse_plan_options.py  test_parse_reconciliation.py  test_parse_schema.py  test_parse_status_classifier.py  test_pipeline_security.py  test_static_serving.py  test_validate.py  test_validate_parse.py  test_validate_schema.py
(+235 files in other folders)
